# .cargo

./: .gitignore  .tm_properties  COPYRIGHT  LICENSE  README.md  cargo-vendor.config.toml  config  config.toml  install  rustfmt.toml
build-profiles/: aarch64-unknown-linux-musl.cortex-a78.toml  aarch64-unknown-linux-musl.neoverse-n1.sh  aarch64-unknown-linux-musl.neoverse-n1.toml  aarch64-unknown-linux-musl.sh  profiles.toml  x86_64-apple-darwin.coffee-lake.sh  x86_64-apple-darwin.coffee-lake.toml  x86_64-apple-darwin.ivybridge.sh  x86_64-apple-darwin.ivybridge.toml  x86_64-unknown-linux-musl.cross-compile.exports  x86_64-unknown-linux-musl.sh  x86_64-unknown-linux-musl.tiger-lake.toml  x86_64-unknown-linux-musl.zen2.sh  x86_64-unknown-linux-musl.zen2.toml
build-profiles/aarch64-unknown-linux-musl/: aarch64-unknown-linux-musl.cross-compile.exports  cortex-a78.toml  neorverse-n1.toml
build-profiles/x86_64-apple-darwin/: coffee-lake.toml  ivy-bridge.toml  native.toml  x86_64-apple-darwin.native.toml
build-profiles/x86_64-unknown-linux-musl/: cross-compile.exports  ivy-bridge.toml  tiger-lake.toml  x86_64-unknown-linux-musl.ivy-bridge.toml  x86_64-unknown-linux-musl.native.toml  x86_64-unknown-linux-musl.tiger-lake.toml  zen2.toml
intellij.idea/: modules.xml
intellij.idea/copyright/: intellij-module.xml
target-specifications/: thumbv6m-none-eabi.json  thumbv7em-none-eabi.json  thumbv7m-none-eabi.json  x86_64-unknown-linux-musl-barcelona.json  x86_64-unknown-linux-musl-bonnell.json  x86_64-unknown-linux-musl-broadwell.json  x86_64-unknown-linux-musl-haswell.json  x86_64-unknown-linux-musl-ivybridge.json  x86_64-unknown-linux-musl-knl.json  x86_64-unknown-linux-musl-nehalem.json  x86_64-unknown-linux-musl-sandybridge.json  x86_64-unknown-linux-musl-silvermont.json  x86_64-unknown-linux-musl-skylake-avx512.json  x86_64-unknown-linux-musl-skylake.json  x86_64-unknown-linux-musl-westmere.json
templates/: Cargo.toml  README.md  build.rs  lib.rs
tools/: cargo-build-release  cargo-check  cargo-publish  cargo-target-cpu-profile-wrapper  cargo-vendor-sources  cargo-vendor-versioned-dirs  common.sh
tools/intellij-rust-plugin-toolchain/: README.md  cargo  rustc  rustfmt  rustup
