# This file is part of NAME. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/NAME/master/COPYRIGHT. No part of NAME, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © YEAR The developers of NAME. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/NAME/master/COPYRIGHT.


[package]
name = "NAME"
description = "NAME"
keywords = ["NAME"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/NAME"
repository = "https://github.com/lemonrock/NAME.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
edition = '2018'
version = "0.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
strip = true
